--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "mn109:9.10": "Name und Form sind der Grund, dass das Bewusstseins-Aggregat zu finden ist.“ ",
   "mn109:10.1": "„Aber Herr, wie kommt der Glaube an eine Persönlichkeit nicht zustande?“ ",
   "mn109:10.2": "„Da hat ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geübt. Er hat keine guten Menschen gesehen und ist in der Lehre der Guten nicht bewandert und geübt. ",
-  "mn109:10.3": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. "
+  "mn109:10.3": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
+  "mn109:10.4": "Er betrachtet Gefühl als das Selbst, das Selbst als etwas, das Gefühl hat, Gefühl als im Selbst oder das Selbst als im Gefühl. "
 }
