--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "mn109:10.3": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "mn109:10.4": "Er betrachtet Gefühl als das Selbst, das Selbst als etwas, das Gefühl hat, Gefühl als im Selbst oder das Selbst als im Gefühl. ",
   "mn109:10.5": "Er betrachtet Wahrnehmung als das Selbst, das Selbst als etwas, das Wahrnehmung hat, Wahrnehmung als im Selbst oder das Selbst als in der Wahrnehmung. ",
-  "mn109:10.6": "Er betrachtet Entscheidungen als das Selbst, das Selbst als etwas, das Entscheidungen hat, Entscheidungen als im Selbst oder das Selbst als in Entscheidungen. "
+  "mn109:10.6": "Er betrachtet Entscheidungen als das Selbst, das Selbst als etwas, das Entscheidungen hat, Entscheidungen als im Selbst oder das Selbst als in Entscheidungen. ",
+  "mn109:10.7": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
 }
