--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -46,5 +46,6 @@
   "mn109:10.5": "Er betrachtet Wahrnehmung als das Selbst, das Selbst als etwas, das Wahrnehmung hat, Wahrnehmung als im Selbst oder das Selbst als in der Wahrnehmung. ",
   "mn109:10.6": "Er betrachtet Entscheidungen als das Selbst, das Selbst als etwas, das Entscheidungen hat, Entscheidungen als im Selbst oder das Selbst als in Entscheidungen. ",
   "mn109:10.7": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
-  "mn109:10.8": "So kommt der Glaube an eine Persönlichkeit zustande.“ "
+  "mn109:10.8": "So kommt der Glaube an eine Persönlichkeit zustande.“ ",
+  "mn109:11.1": "„Aber Herr, wie kommt der Glaube an eine Persönlichkeit nicht zustande?“ "
 }
