--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "mn109:11.1": "„Aber Herr, wie kommt der Glaube an eine Persönlichkeit nicht zustande?“ ",
   "mn109:11.2": "„Da hat ein gebildeter edler Schüler die Edlen gesehen und ist in der Lehre der Edlen bewandert und geübt. Er hat gute Menschen gesehen und ist in der Lehre der Guten bewandert und geübt. ",
   "mn109:11.3": "Er betrachtet nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
-  "mn109:11.4": "Er betrachtet nicht Gefühl als das Selbst, das Selbst als etwas, das Gefühl hat, Gefühl als im Selbst oder das Selbst als im Gefühl. "
+  "mn109:11.4": "Er betrachtet nicht Gefühl als das Selbst, das Selbst als etwas, das Gefühl hat, Gefühl als im Selbst oder das Selbst als im Gefühl. ",
+  "mn109:11.5": "Er betrachtet nicht Wahrnehmung als das Selbst, das Selbst als etwas, das Wahrnehmung hat, Wahrnehmung als im Selbst oder das Selbst als in der Wahrnehmung. "
 }
