Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -52,5 +52,6 @@
   "mn109:11.3": "Er betrachtet nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "mn109:11.4": "Er betrachtet nicht Gefühl als das Selbst, das Selbst als etwas, das Gefühl hat, Gefühl als im Selbst oder das Selbst als im Gefühl. ",
   "mn109:11.5": "Er betrachtet nicht Wahrnehmung als das Selbst, das Selbst als etwas, das Wahrnehmung hat, Wahrnehmung als im Selbst oder das Selbst als in der Wahrnehmung. ",
-  "mn109:11.6": "Er betrachtet nicht Entscheidungen als das Selbst, das Selbst als etwas, das Entscheidungen hat, Entscheidungen als im Selbst oder das Selbst als in Entscheidungen. "
+  "mn109:11.6": "Er betrachtet nicht Entscheidungen als das Selbst, das Selbst als etwas, das Entscheidungen hat, Entscheidungen als im Selbst oder das Selbst als in Entscheidungen. ",
+  "mn109:11.7": "Er betrachtet nicht Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
 }
