Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -57,5 +57,6 @@
   "mn109:11.8": "So kommt der Glaube an eine Persönlichkeit nicht zustande.“ ",
   "mn109:12.1": "„Herr, worin bestehen die vorteilhaften und nachteiligen Folgen und das Entrinnen bei der Form, ",
   "mn109:12.2": "beim Gefühl … ",
-  "mn109:12.3": "bei der Wahrnehmung … "
+  "mn109:12.3": "bei der Wahrnehmung … ",
+  "mn109:12.4": "bei Entscheidungen … "
 }
