Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "mn109:12.1": "„Herr, worin bestehen die vorteilhaften und nachteiligen Folgen und das Entrinnen bei der Form, ",
   "mn109:12.2": "beim Gefühl … ",
   "mn109:12.3": "bei der Wahrnehmung … ",
-  "mn109:12.4": "bei Entscheidungen … "
+  "mn109:12.4": "bei Entscheidungen … ",
+  "mn109:12.5": "und beim Bewusstsein?“ "
 }
