--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "mn109:12.2": "beim Gefühl … ",
   "mn109:12.3": "bei der Wahrnehmung … ",
   "mn109:12.4": "bei Entscheidungen … ",
-  "mn109:12.5": "und beim Bewusstsein?“ "
+  "mn109:12.5": "und beim Bewusstsein?“ ",
+  "mn109:12.6": "„In dem Glück und dem Hochgefühl, die aus Form entstehen: Darin bestehen ihre vorteilhaften Folgen. "
 }
