--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -64,5 +64,6 @@
   "mn109:12.7": "Dass Form unbeständig ist, voller Leiden, dass sie zugrunde gehen muss: Darin bestehen ihre nachteiligen Folgen. ",
   "mn109:12.8": "Das Sehnen und Begehren nach Form ausräumen und aufgeben: Darin besteht das Entrinnen von ihr. ",
   "mn109:12.9": "In dem Glück und dem Hochgefühl, die aus Gefühl entstehen … ",
-  "mn109:12.10": "die aus Wahrnehmung entstehen … "
+  "mn109:12.10": "die aus Wahrnehmung entstehen … ",
+  "mn109:12.11": "die aus Entscheidungen entstehen … "
 }
