Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -65,5 +65,6 @@
   "mn109:12.8": "Das Sehnen und Begehren nach Form ausräumen und aufgeben: Darin besteht das Entrinnen von ihr. ",
   "mn109:12.9": "In dem Glück und dem Hochgefühl, die aus Gefühl entstehen … ",
   "mn109:12.10": "die aus Wahrnehmung entstehen … ",
-  "mn109:12.11": "die aus Entscheidungen entstehen … "
+  "mn109:12.11": "die aus Entscheidungen entstehen … ",
+  "mn109:12.12": "die aus Bewusstsein entstehen: Darin bestehen seine vorteilhaften Folgen. "
 }
