Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "mn109:12.9": "In dem Glück und dem Hochgefühl, die aus Gefühl entstehen … ",
   "mn109:12.10": "die aus Wahrnehmung entstehen … ",
   "mn109:12.11": "die aus Entscheidungen entstehen … ",
-  "mn109:12.12": "die aus Bewusstsein entstehen: Darin bestehen seine vorteilhaften Folgen. "
+  "mn109:12.12": "die aus Bewusstsein entstehen: Darin bestehen seine vorteilhaften Folgen. ",
+  "mn109:12.13": "Dass Bewusstsein unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen seine nachteiligen Folgen. "
 }
