Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -67,5 +67,6 @@
   "mn109:12.10": "die aus Wahrnehmung entstehen … ",
   "mn109:12.11": "die aus Entscheidungen entstehen … ",
   "mn109:12.12": "die aus Bewusstsein entstehen: Darin bestehen seine vorteilhaften Folgen. ",
-  "mn109:12.13": "Dass Bewusstsein unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen seine nachteiligen Folgen. "
+  "mn109:12.13": "Dass Bewusstsein unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen seine nachteiligen Folgen. ",
+  "mn109:12.14": "Das Sehnen und Begehren nach Bewusstsein ausräumen und aufgeben: Darin besteht das Entrinnen von ihm.“ "
 }
