--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -72,5 +72,6 @@
   "mn109:13.1": "„Herr, auf welche Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen beseelten Körper gibt, noch für alle äußeren Reize?“ ",
   "mn109:13.2": "„Mönch, man sieht jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
   "mn109:13.3": "Man sieht jegliche Art von Gefühl … ",
-  "mn109:13.4": "jegliche Art von Wahrnehmung … "
+  "mn109:13.4": "jegliche Art von Wahrnehmung … ",
+  "mn109:13.5": "jegliche Art von Entscheidungen … "
 }
