--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -75,5 +75,6 @@
   "mn109:13.4": "jegliche Art von Wahrnehmung … ",
   "mn109:13.5": "jegliche Art von Entscheidungen … ",
   "mn109:13.6": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
-  "mn109:13.7": "Auf diese Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen beseelten Körper gibt, noch für alle äußeren Reize.“ "
+  "mn109:13.7": "Auf diese Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen beseelten Körper gibt, noch für alle äußeren Reize.“ ",
+  "mn109:14.1": "Da kam zu dieser Zeit einem der Mönche dieser Gedanke in den Sinn: "
 }
