--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -83,5 +83,6 @@
   "mn109:14.5": "„Es ist möglich, dass ein törichter Mensch hier, unverständig und unwissend, mit von Verlangen beherrschtem Geist, denkt, er könne die Anleitung des Lehrers überschreiten: ",
   "mn109:14.6": "‚So scheint es, guter Herr, dass Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein nicht-selbst sind. ",
   "mn109:14.7": "Welches Selbst werden dann die Taten betreffen, die von einem Nicht-Selbst begangen wurden?‘ ",
+  "mn109:14.8": "Nun, Mönche, ihr wurdet von mir in Bezug auf all diese Dinge in all diesen Fällen im Fragen erzogen. ",
   "mn109:15.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ "
 }
