--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -89,5 +89,5 @@
   "mn109:15.3": "„Unbeständig, Herr.“ ",
   "mn109:15.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
   "mn109:15.5": "„Leiden, Herr.“ ",
-  "mn109:15.6": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
+  "mn109:15.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: "
 }
