--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -92,5 +92,6 @@
   "mn109:15.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: ",
   "mn109:15.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "mn109:15.8": "„Nein, Herr.“ ",
-  "mn109:16.1": "„Was denkt ihr, Mönche und Nonnen? "
+  "mn109:16.1": "„Was denkt ihr, Mönche und Nonnen? ",
+  "mn109:16.2": "„Ist Gefühl …“ … "
 }
