--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -94,5 +94,6 @@
   "mn109:15.8": "„Nein, Herr.“ ",
   "mn109:16.1": "„Was denkt ihr, Mönche und Nonnen? ",
   "mn109:16.2": "„Ist Gefühl …“ … ",
-  "mn109:16.3": "„Ist Wahrnehmung …“ … "
+  "mn109:16.3": "„Ist Wahrnehmung …“ … ",
+  "mn109:16.4": "„Sind Entscheidungen …“ … "
 }
