Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -97,5 +97,6 @@
   "mn109:16.3": "„Ist Wahrnehmung …“ … ",
   "mn109:16.4": "„Sind Entscheidungen …“ … ",
   "mn109:16.5": "„Ist Bewusstsein beständig oder unbeständig?“ ",
-  "mn109:16.6": "„Unbeständig, Herr.“ "
+  "mn109:16.6": "„Unbeständig, Herr.“ ",
+  "mn109:16.7": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
 }
