Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -100,5 +100,7 @@
   "mn109:16.6": "„Unbeständig, Herr.“ ",
   "mn109:16.7": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "mn109:16.8": "„Leiden, Herr.“ ",
-  "mn109:16.9": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
+  "mn109:16.9": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
+  "mn109:16.10": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
+  "mn109:16.11": "„Nein, Herr.“ "
 }
