--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -102,5 +102,6 @@
   "mn109:16.8": "„Leiden, Herr.“ ",
   "mn109:16.9": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
   "mn109:16.10": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
-  "mn109:16.11": "„Nein, Herr.“ "
+  "mn109:16.11": "„Nein, Herr.“ ",
+  "mn109:16.12": "„Daher solltet ihr jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ "
 }
