--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -106,5 +106,6 @@
   "mn109:16.12": "„Daher solltet ihr jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
   "mn109:17.1": "Ihr solltet jegliche Art von Gefühl … ",
   "mn109:17.2": "jegliche Art von Wahrnehmung … ",
-  "mn109:17.3": "jegliche Art von Entscheidungen … "
+  "mn109:17.3": "jegliche Art von Entscheidungen … ",
+  "mn109:17.4": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ "
 }
