--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -112,5 +112,6 @@
   "mn109:18.1": "Wenn er ernüchtert ist, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, ist er befreit. Wenn er befreit ist, weiß er, dass er befreit ist. ",
   "mn109:18.2": "Er versteht: ‚Wiedergeburt ist beendet; die spirituelle Reise ist abgeschlossen; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ ",
   "mn109:18.3": "Das sagte der Buddha. ",
-  "mn109:18.4": "Zufrieden freuten sich die Mönche und Nonnen über die Worte des Buddha. "
+  "mn109:18.4": "Zufrieden freuten sich die Mönche und Nonnen über die Worte des Buddha. ",
+  "mn109:18.5": "Und während diese Lehrrede gesprochen wurde, wurde der Geist von sechzig Mönchen durch Nicht-Ergreifen von den Befleckungen befreit. "
 }
