--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -84,7 +84,7 @@
   "mn109:14.6": "‚So scheint es, guter Herr, dass Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein nicht-selbst sind. ",
   "mn109:14.7": "Welches Selbst werden dann die Taten betreffen, die von einem Nicht-Selbst begangen wurden?‘ ",
   "mn109:14.8": "Nun, Mönche, ihr wurdet von mir in Bezug auf all diese Dinge in all diesen Fällen im Fragen erzogen. ",
-  "mn109:15.1": "Was denkt ihr, Mönche und Nonnen? ",
+  "mn109:15.1": "Was denkt ihr, Mönche? ",
   "mn109:15.2": "Ist Form beständig oder unbeständig?“ ",
   "mn109:15.3": "„Unbeständig, Herr.“ ",
   "mn109:15.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
