Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -90,7 +90,7 @@
   "sn22.82:13.2": "‚So scheint es, guter Herr, dass Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein nicht-selbst sind. ",
   "sn22.82:13.3": "Welches Selbst werden dann die Taten betreffen, die von einem Nicht-Selbst begangen wurden?‘ ",
   "sn22.82:13.4": "Nun, Mönche, ihr wurdet von mir in Bezug auf all diese Dinge in all diesen Fällen im Fragen erzogen. ",
-  "sn22.82:14.1": "Was denkt ihr, Mönche und Nonnen? ",
+  "sn22.82:14.1": "Was denkt ihr, Mönche? ",
   "sn22.82:14.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.82:14.3": "„Unbeständig, Herr.“ ",
   "sn22.82:14.4": "„Ist Gefühl …“ … ",
