--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -40,7 +40,7 @@
   "sn22.82:7.7": "Berührung ist der Grund und die Ursache, dass das Gefühls-Aggregat, ",
   "sn22.82:7.8": "das Wahrnehmungs-Aggregat ",
   "sn22.82:7.9": "und das Entscheidungs-Aggregat zu finden sind. ",
-  "sn22.82:7.10": "Name und Form sind der Grund, dass das Bewusstseins-Aggregat zu finden ist.“ ",
+  "sn22.82:7.10": "Name und Form sind der Grund und die Ursache, dass das Bewusstseins-Aggregat zu finden ist.“ ",
   "sn22.82:7.11": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: ",
   "sn22.82:8.1": "„Herr, wie kommt der Glaube an eine Persönlichkeit zustande?“ ",
   "sn22.82:8.2": "„Da hat ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geübt. Er hat keine guten Menschen gesehen und ist in der Lehre der Guten nicht bewandert und geübt. ",
