Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -58,7 +58,7 @@
   "mn109:12.1": "„Herr, worin bestehen die vorteilhaften und nachteiligen Folgen und das Entrinnen bei der Form, ",
   "mn109:12.2": "beim Gefühl, ",
   "mn109:12.3": "bei der Wahrnehmung, ",
-  "mn109:12.4": "bei Entscheidungen … ",
+  "mn109:12.4": "bei Entscheidungen ",
   "mn109:12.5": "und beim Bewusstsein?“ ",
   "mn109:12.6": "„In dem Glück und dem Hochgefühl, die aus Form entstehen: Darin bestehen ihre vorteilhaften Folgen. ",
   "mn109:12.7": "Dass Form unbeständig ist, voller Leiden, dass sie zugrunde gehen muss: Darin bestehen ihre nachteiligen Folgen. ",
