--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn22.83:0.1": "Verbundene Lehrreden 22.83 "
+  "sn22.83:0.1": "Verbundene Lehrreden 22.83 ",
+  "sn22.83:0.2": "9. Das Kapitel mit Ordensältesten "
 }
