--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -693,6 +693,7 @@
   "sn-name:692.sn22.81": "In Pārileyya ",
   "sn-name:693.sn22.82": "Eine Vollmondnacht ",
   "sn-name:694.sn22-theravagga": "Das Kapitel mit Ordensältesten ",
+  "sn-name:695.sn22.83": "Mit Ānanda ",
   "sn-name:702.sn22.90": "Mit Channa ",
   "sn-name:705.sn22-pupphavagga": "Das Kapitel über Blumen ",
   "sn-name:707.sn22.94": "Blumen ",
