--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.83:0.1": "Verbundene Lehrreden 22.83 ",
   "sn22.83:0.2": "9. Das Kapitel mit Ordensältesten ",
-  "sn22.83:0.3": "Mit Ānanda "
+  "sn22.83:0.3": "Mit Ānanda ",
+  "sn22.83:1.1": "In Sāvatthī. "
 }
