--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.83:0.2": "9. Das Kapitel mit Ordensältesten ",
   "sn22.83:0.3": "Mit Ānanda ",
   "sn22.83:1.1": "In Sāvatthī. ",
-  "sn22.83:1.2": "Da wandte sich Ānanda an die Mönche und Nonnen: "
+  "sn22.83:1.2": "Da wandte sich Ānanda an die Mönche und Nonnen: ",
+  "sn22.83:1.3": "„Werte Freunde, Mönche und Nonnen!“ "
 }
