Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.83:1.4": "„Werter Freund“, antworteten sie. ",
   "sn22.83:1.5": "Ānanda sagte: ",
   "sn22.83:2.1": "„Werte Freunde, der Ehrwürdige mit Namen Puṇṇa, der Sohn Mantāṇīs, war mir eine große Hilfe, als ich gerade ordiniert war. ",
-  "sn22.83:2.2": "Er gab mir diesen Rat: "
+  "sn22.83:2.2": "Er gab mir diesen Rat: ",
+  "sn22.83:2.3": "‚Werter Ānanda, die Idee ‚ich bin‘ kommt durch Ergreifen auf, nicht durch Nicht-Ergreifen. "
 }
