--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.83:2.2": "Er gab mir diesen Rat: ",
   "sn22.83:2.3": "‚Werter Ānanda, die Idee ‚ich bin‘ kommt auf durch Ergreifen, nicht durch Nicht-Ergreifen. ",
   "sn22.83:2.4": "Durch Ergreifen wovon? ",
-  "sn22.83:2.5": "Die Idee ‚ich bin‘ kommt auf durch Ergreifen von Form, "
+  "sn22.83:2.5": "Die Idee ‚ich bin‘ kommt auf durch Ergreifen von Form, ",
+  "sn22.83:2.6": "Gefühl, "
 }
