--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.83:2.4": "Durch Ergreifen wovon? ",
   "sn22.83:2.5": "Die Idee ‚ich bin‘ kommt auf durch Ergreifen von Form, ",
   "sn22.83:2.6": "Gefühl, ",
-  "sn22.83:2.7": "Wahrnehmung, "
+  "sn22.83:2.7": "Wahrnehmung, ",
+  "sn22.83:2.8": "Entscheidungen "
 }
