Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "sn22.83:2.2": "Er gab mir diesen Rat: ",
   "sn22.83:2.3": "‚Werter Ānanda, die Idee ‚ich bin‘ kommt auf, wenn man ergreift, nicht, wenn man nicht ergreift. ",
   "sn22.83:2.4": "Wenn man was ergreift? ",
-  "sn22.83:2.5": "Die Idee ‚ich bin‘ kommt auf durch Ergreifen von Form, ",
+  "sn22.83:2.5": "Die Idee ‚ich bin‘ kommt auf, wenn man Form ergreift, ",
   "sn22.83:2.6": "Gefühl, ",
   "sn22.83:2.7": "Wahrnehmung, ",
   "sn22.83:2.8": "Entscheidungen ",
