Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "sn22.83:2.4": "Wenn man was ergreift? ",
   "sn22.83:2.5": "Die Idee ‚ich bin‘ kommt auf, wenn man Form ergreift, ",
   "sn22.83:2.6": "wenn man Gefühl ergreift, ",
-  "sn22.83:2.7": "Wahrnehmung, ",
+  "sn22.83:2.7": "Wahrnehmung, wenn man Wahrnehmung ergreift, ",
   "sn22.83:2.8": "Entscheidungen ",
   "sn22.83:2.9": "und Bewusstsein, nicht durch Nicht-Ergreifen. "
 }
