Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -15,5 +15,5 @@
   "sn22.83:2.6": "wenn man Gefühl ergreift, ",
   "sn22.83:2.7": "Wahrnehmung, wenn man Wahrnehmung ergreift, ",
   "sn22.83:2.8": "wenn man Entscheidungen ergreift ",
-  "sn22.83:2.9": "und Bewusstsein, nicht durch Nicht-Ergreifen. "
+  "sn22.83:2.9": "und wenn man Bewusstsein ergreift, nicht, wenn man nicht ergreift. "
 }
