Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -14,6 +14,6 @@
   "sn22.83:2.5": "Die Idee ‚ich bin‘ kommt auf, weil man Form ergreift, ",
   "sn22.83:2.6": "weil man Gefühl ergreift, ",
   "sn22.83:2.7": "weil man Wahrnehmung ergreift, ",
-  "sn22.83:2.8": "wenn man Entscheidungen ergreift ",
+  "sn22.83:2.8": "weil man Entscheidungen ergreift ",
   "sn22.83:2.9": "und wenn man Bewusstsein ergreift, nicht, wenn man nicht ergreift. "
 }
