Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn22.83:4.3": "‚Unbeständig, werter Freund.‘ ",
   "sn22.83:4.4": "‚Ist Gefühl …‘ … ",
   "sn22.83:4.5": "‚Ist Wahrnehmung …‘ … ",
-  "sn22.83:4.6": "‚Sind Entscheidungen …‘ … "
+  "sn22.83:4.6": "‚Sind Entscheidungen …‘ … ",
+  "sn22.83:4.7": "‚Ist Bewusstsein beständig oder unbeständig?‘ "
 }
