Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn22.83:4.6": "‚Sind Entscheidungen …‘ … ",
   "sn22.83:4.7": "‚Ist Bewusstsein beständig oder unbeständig?‘ ",
   "sn22.83:4.8": "‚Unbeständig, werter Freund.‘ ",
-  "sn22.83:4.9": "‚Daher solltest du jegliche Art … sehen … "
+  "sn22.83:4.9": "‚Daher solltest du jegliche Art … sehen … ",
+  "sn22.83:4.10": "Wenn er das sieht … "
 }
