Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn22.83:4.8": "‚Unbeständig, werter Freund.‘ ",
   "sn22.83:4.9": "‚Daher solltest du jegliche Art … sehen … ",
   "sn22.83:4.10": "Wenn er das sieht … ",
-  "sn22.83:4.11": "Er versteht: „… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.“‘ "
+  "sn22.83:4.11": "Er versteht: „… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.“‘ ",
+  "sn22.83:4.12": "Werte Freunde, der Ehrwürdige mit Namen Puṇṇa, der Sohn Mantāṇīs, war mir eine große Hilfe, als ich gerade ordiniert war. "
 }
