Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -45,9 +45,9 @@
   "pli-tv-kd13:1.3.25": "Any monk who approves of giving him that trial period of six days should remain silent. ",
   "pli-tv-kd13:1.3.26": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:1.3.27": "The Sangha has given the monk Udāyī the trial period of six days for one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:1.3.28": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:1.3.28": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:2.1.0": "1.2 Rehabilitation for those with unconcealed offenses ",
-  "pli-tv-kd13:2.1.1": "When he had completed the trial period, he told the monks, ",
+  "pli-tv-kd13:2.1.1": "When he had completed that trial period, he told the monks, ",
   "pli-tv-kd13:2.1.2": "“I had committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:2.1.3": "I asked the Sangha for the trial period of six days for that offense. ",
   "pli-tv-kd13:2.1.4": "The Sangha gave me the trial period, ",
