Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -65,14 +65,14 @@
   "pli-tv-kd13:2.2.8": "which it did. ",
   "pli-tv-kd13:2.2.9": "I’ve now completed that trial period, and for the second time I ask the Sangha for rehabilitation. ",
   "pli-tv-kd13:2.2.10": "I had committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:2.2.11": "I asked the Sangha for the trial period of six days for that offense, ",
-  "pli-tv-kd13:2.2.12": "and the Sangha gave me the trial period. ",
-  "pli-tv-kd13:2.2.13": "I’ve now completed the trial period and for the third time I ask the Sangha for rehabilitation.’ ",
+  "pli-tv-kd13:2.2.11": "I asked the Sangha to give me the trial period of six days for that offense, ",
+  "pli-tv-kd13:2.2.12": "which it did. ",
+  "pli-tv-kd13:2.2.13": "I’ve now completed that trial period, and for the third time I ask the Sangha for rehabilitation.’ ",
   "pli-tv-kd13:2.3.1": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:2.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:2.3.3": "The monk Udāyī had committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:2.3.4": "He asked the Sangha for the trial period of six days for that offense, ",
-  "pli-tv-kd13:2.3.5": "and the Sangha gave him the trial period. ",
+  "pli-tv-kd13:2.3.4": "He asked the Sangha to give him the trial period of six days for that offense, ",
+  "pli-tv-kd13:2.3.5": "which it did. ",
   "pli-tv-kd13:2.3.6": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:2.3.7": "If it seems appropriate to the Sangha, the Sangha should rehabilitate him. ",
   "pli-tv-kd13:2.3.8": "This is the motion. ",
