Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -145,8 +145,8 @@
   "pli-tv-kd13:4.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:4.2.3": "and say: ",
   "pli-tv-kd13:4.2.4": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:4.2.5": "I asked the Sangha for probation for one day for that offense, ",
-  "pli-tv-kd13:4.2.6": "and the Sangha gave me that probation. ",
+  "pli-tv-kd13:4.2.5": "I asked the Sangha to give me probation for one day for that offense, ",
+  "pli-tv-kd13:4.2.6": "which it did. ",
   "pli-tv-kd13:4.2.7": "I’ve now completed that probation and I ask the Sangha for the trial period of six days for that offense.’ ",
   "pli-tv-kd13:4.2.8": "And he should ask a second ",
   "pli-tv-kd13:4.2.9": "and a third time. ",
