Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -154,13 +154,13 @@
   "pli-tv-kd13:4.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:4.3.3": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for one day. ",
   "pli-tv-kd13:4.3.4": "He asked the Sangha to give him probation for one day for that offense, ",
-  "pli-tv-kd13:4.3.5": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:4.3.6": "He’s now completed that probation and is asking the Sangha for the trial period of six days for that offense. ",
-  "pli-tv-kd13:4.3.7": "If it seems appropriate to the Sangha, the Sangha should give him the trial period of six days. ",
+  "pli-tv-kd13:4.3.5": "which it did. ",
+  "pli-tv-kd13:4.3.6": "He’s now completed that probation and is asking the Sangha for the trial period of six days. ",
+  "pli-tv-kd13:4.3.7": "If it seems appropriate to the Sangha, the Sangha should give him that trial period. ",
   "pli-tv-kd13:4.3.8": "This is the motion. ",
   "pli-tv-kd13:4.3.9": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:4.3.10": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:4.3.11": "He asked the Sangha for probation for one day for that offense, ",
+  "pli-tv-kd13:4.3.11": "He asked the Sangha to give him probation for one day for that offense, ",
   "pli-tv-kd13:4.3.12": "and the Sangha gave him that probation. ",
   "pli-tv-kd13:4.3.13": "He’s now completed that probation and is asking the Sangha for the trial period of six days for that offense. ",
   "pli-tv-kd13:4.3.14": "The Sangha gives him the trial period of six days. ",
