Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -169,12 +169,12 @@
   "pli-tv-kd13:4.3.17": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:4.3.18": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:4.3.19": "The Sangha has given the monk Udāyī the trial period of six days for one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:4.3.20": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:4.3.20": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:5.1.0": "1.5 Rehabilitation for those with offenses concealed for one day ",
-  "pli-tv-kd13:5.1.1": "When he had completed the trial period, he told the monks, ",
+  "pli-tv-kd13:5.1.1": "When he had completed that trial period, he told the monks, ",
   "pli-tv-kd13:5.1.2": "“I had committed one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:5.1.3": "I asked the Sangha for probation for one day for that offense, ",
-  "pli-tv-kd13:5.1.4": "and the Sangha gave me that probation. ",
+  "pli-tv-kd13:5.1.3": "I asked the Sangha to give me probation for one day for that offense, ",
+  "pli-tv-kd13:5.1.4": "which it did. ",
   "pli-tv-kd13:5.1.5": "When I had completed the probation, I asked the Sangha for the trial period of six days for that offense. ",
   "pli-tv-kd13:5.1.6": "The Sangha gave me the trial period, ",
   "pli-tv-kd13:5.1.7": "and I’ve now completed it. ",
