Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -175,10 +175,10 @@
   "pli-tv-kd13:5.1.2": "“I had committed one offense of intentional emission of semen, concealed for one day. ",
   "pli-tv-kd13:5.1.3": "I asked the Sangha to give me probation for one day for that offense, ",
   "pli-tv-kd13:5.1.4": "which it did. ",
-  "pli-tv-kd13:5.1.5": "When I had completed the probation, I asked the Sangha for the trial period of six days for that offense. ",
-  "pli-tv-kd13:5.1.6": "The Sangha gave me the trial period, ",
-  "pli-tv-kd13:5.1.7": "and I’ve now completed it. ",
-  "pli-tv-kd13:5.1.8": "What should I do now?” ",
+  "pli-tv-kd13:5.1.5": "When I had completed that probation, I asked the Sangha to give me the trial period of six days, ",
+  "pli-tv-kd13:5.1.6": "which it did. ",
+  "pli-tv-kd13:5.1.7": "I’ve now completed it. ",
+  "pli-tv-kd13:5.1.8": "What should I do next?” ",
   "pli-tv-kd13:5.1.9": "They told the Buddha. ",
   "pli-tv-kd13:5.1.10": "“Well then, the Sangha should rehabilitate the monk Udāyī. ",
   "pli-tv-kd13:5.2.1": "And it should be done like this: ",
