Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -196,7 +196,7 @@
   "pli-tv-kd13:5.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:5.3.3": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for one day. ",
   "pli-tv-kd13:5.3.4": "He asked the Sangha to give him probation for one day for that offense, ",
-  "pli-tv-kd13:5.3.5": "and the Sangha gave him that probation. ",
+  "pli-tv-kd13:5.3.5": "which it did. ",
   "pli-tv-kd13:5.3.6": "When he had completed the probation, he asked the Sangha for the trial period of six days for that offense, ",
   "pli-tv-kd13:5.3.7": "and the Sangha gave him the trial period. ",
   "pli-tv-kd13:5.3.8": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
